--- a/sensors/sensors.yml
+++ b/sensors/sensors.yml
@@ -14,7 +14,8 @@
   name: "WS 1 Batt"
   format: TwoByteFloat
   destination_queues:
-    - "/ws/1/batt"
+    - "/ws/1/ind/batt"
+    - "/ws/1/grp/generic"
   metric_name: "ws_1_batt"
   metric_type: Gauge
   metric_labels:
@@ -25,7 +26,7 @@
   name: "WS 1 Temp"
   format: TwoByteFloat
   destination_queues:
-    - "/ws/1/temp"
+    - "/ws/1/ind/temp"
   metric_name: "outside_temp_f"
   metric_type: Gauge
   metric_labels:
@@ -35,7 +36,7 @@
   name: "WS 1 Humidity"
   format: TwoByteFloat
   destination_queues:
-    - "/ws/1/humidity"
+    - "/ws/1/ind/humidity"
   metric_name: "outside_humidity_percent"
   metric_type: Gauge
   metric_labels:
@@ -45,7 +46,7 @@
   name: "WS 1 UV Raw"
   format: TwoByteInt
   destination_queues:
-    - "/ws/1/raw_uv"
+    - "/ws/1/ind/raw_uv"
   metric_name: "uv_raw"
   metric_type: Gauge
   metric_labels:
@@ -55,7 +56,7 @@
   name: "WS 1 UV Index"
   format: TwoByteFloat
   destination_queues:
-    - "/ws/1/uv_index"
+    - "/ws/1/ind/uv_index"
   metric_name: "uv_index"
   metric_type: Gauge
   metric_labels:
@@ -66,7 +67,7 @@
   name: "WS 1 ALS UV Index"
   format: TwoByteFloat
   destination_queues:
-    - "/ws/1/als_uv_index"
+    - "/ws/1/ind/als_uv_index"
   metric_name: "uv_index"
   metric_type: Gauge
   metric_labels:
@@ -77,7 +78,7 @@
   name: "WS 1 ALS Visible Light Raw"
   format: TwoByteInt
   destination_queues:
-    - "/ws/1/als_vis_raw"
+    - "/ws/1/ind/als_vis_raw"
   metric_name: "vis_light_raw"
   metric_type: Gauge
   metric_labels:
@@ -87,7 +88,7 @@
   name: "WS 1 ALS IR Light Raw"
   format: TwoByteInt
   destination_queues:
-    - "/ws/1/als_ir_raw"
+    - "/ws/1/ind/als_ir_raw"
   metric_name: "ir_light_raw"
   metric_type: Gauge
   metric_labels:
@@ -97,7 +98,7 @@
   name: "WS 1 ALS Lux"
   format: FourByteInt
   destination_queues:
-    - "/ws/1/als_lux"
+    - "/ws/1/ind/als_lux"
   metric_name: "light_intensity_lux"
   metric_type: Gauge
   metric_labels:
@@ -107,7 +108,8 @@
   name: "WS 1 Rain Gauge Tip"
   format: Bool
   destination_queues:
-    - "/ws/1/rain"
+    - "/ws/1/ind/rain"
+    - "/ws/1/grp/generic"
   metric_name: "rain_fall_hun_in"
   metric_type: Counter
   metric_labels:
@@ -117,7 +119,8 @@
   name: "WS 1 Retransmissions"
   format: SingleByteInt
   destination_queues:
-    - "/ws/1/retransmissions"
+    - "/ws/1/ind/retransmissions"
+    - "/ws/1/grp/generic"
   metric_name: "wireless_retransmissions"
   metric_type: Counter
   metric_labels:
@@ -127,7 +130,7 @@
   name: "WS 2 Temp"
   format: TwoByteFloat
   destination_queues:
-    - "/ws/2/temp"
+    - "/ws/2/ind/temp"
   metric_name: "temp_f"
   metric_type: Gauge
   metric_labels:
@@ -137,7 +140,7 @@
   name: "WS 2 Humidity"
   format: TwoByteFloat
   destination_queues:
-    - "/ws/2/humidity"
+    - "/ws/2/ind/humidity"
   metric_name: "humidity_percent"
   metric_type: Gauge
   metric_labels:
@@ -148,7 +151,8 @@
   name: "WS 3 Propane"
   format: Bool
   destination_queues:
-  - "/ws/3/propane"
+  - "/ws/3/ind/propane"
+  - "/ws/3/grp/generic"
   metric_name: "cu_ft_propane"
   metric_type: Counter
   metric_labels:
@@ -158,7 +162,7 @@
   name: "WS 3 Temp"
   format: TwoByteFloat
   destination_queues:
-  - "/ws/3/temp"
+  - "/ws/3/ind/temp"
   metric_name: "temp_f"
   metric_type: Gauge
   metric_labels:
@@ -168,7 +172,7 @@
   name: "WS 3 Humidity"
   format: TwoByteFloat
   destination_queues:
-  - "/ws/3/humidity"
+  - "/ws/3/ind/humidity"
   metric_name: "humidity_percent"
   metric_type: Gauge
   metric_labels:
