--- a/sensors/sensors.yml
+++ b/sensors/sensors.yml
@@ -146,6 +146,28 @@
   metric_labels:
     location: "ws2"
 
+- id: 52
+  name: "WS 2 CO2"
+  format: TwoByteInt
+  destination_queues:
+    - "/ws/2/ind/temp"
+    - "/ws/2/grp/generic"
+  metric_name: "co2"
+  metric_type: Gauge
+  metric_labels:
+    location: "ws2"
+
+- id: 53
+  name: "WS 2 VOC"
+  format: TwoByteInt
+  destination_queues:
+    - "/ws/2/ind/humidity"
+    - "/ws/2/grp/generic"
+  metric_name: "voc"
+  metric_type: Gauge
+  metric_labels:
+    location: "ws2"
+
 
 - id: 100
   name: "WS 3 Propane"
